1998-03-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayHideButton.m (tkobjc_configureWidgetToDrop): Send
	markForDrop, not drop.

	* win32dib.c: Include win32dib.h not dib.h.

	* Makefile (BACKEND_{H,O}): Renamed from XPIXMAP_{H,O}.  Include
	win32dib.[hm] for gnu-win32.

	* internal.m (Colormap): Define as X11Colormap during inclusion
	of tkWinInt.h.
	(tkobjc_raster_createPixmap): Use renamed tkobjc_raster_setColormap.

	* Makefile: Remove defines for Tk headers.  Make a rule
	for internal.o.
	(XPIXMAP_{H,O}): Define conditionally on MACHTYPE vs i386-pc-cygwin32.

	* internal.m: Include win32dib.h and Tk internal header files only
	if _WIN32.  Include <misc.h>.
	(Xfill): New function.
	(tkobjc_raster_fillRectangle}): Use dib_fill in Win32 case and
	Xfill in X case.
	(tkobjc_raster_erase): In Win32 case, setup a temporary colormap
	and use tkobjc_raster_fillRectangle with index of 0 to erase. 
	In X case, use Xfill.
	(tkobjc_raster_drawPoint,tkobjc_setColormap): New functions.
	(tkobjc_raster_createPixmap, tkobjc_raster_flush): Handle Win32
	case.
	(tkobjc_raster_copy): Disabled in Win32 case.
	(XDrawPoint, XCreatePixmap, XFreePixmap): Remove.

	* internal.h: Include <tkobjc/Colormap.h> and make a @class.
	(tkobjc_raster_{fillRectangle,drawPoint}): Takes a colormap index
	not a PixelValue.
	(tkobjc_raster_{erase,setColormap}): Declare.

	* Raster.m ([Raster -setColormap:]): Call tkobjc_setColormap.
	([Raster -erase]): Call tkobjc_raster_erase instead of
	tkobjc_raster_fillRectangle.
	([Raster fillRectangleX0:Y0:X1:Y1:Color:]): Color is now a colormap
	index, not a PixelValue.
	([Raster -drawSelf]): Remove debug message.

	* Raster.h (Raster): Make colormap public.

	* Colormap.h (Colormap): Make map, isSet, and cmap public.

	* win32dib.[hc]: New files.

1998-03-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* common.m (tkobjc_updateIdleTasks, tkobjc_releaseAndUpdate):
	Disable use of BLT busy in _WIN32 case.
