@@ -1,3 +1,8 @@
+1998-03-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* internal.h: Move inclusion of Raster and Colormap after inclusion
+	of tk.h.
+
 1998-03-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ClassDisplayHideButton.m (tkobjc_configureWidgetToDrop): Send
